<resources>
    <string name="app_name">Farmagenda</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Bienvenido</string>
    <string name="text_username">Nombre</string>
    <string name="text_userapellido1">Apellido 1</string>
    <string name="text_userapellido2">Apellido 2</string>
    <string name="text_password">Contraseña</string>
    <string name="text_telefono">Telefono</string>
    <string name="action_sign_in">Inicio Sesión / Registro</string>
    <string name="fragment_Inicio_title">Bienvenido</string>
    <string name="fragment_Login_title">Cuenta de usuario</string>
    <string name="fragment_dia_title">Dia</string>
    <string name="fragment_new_medicamento_title">Nuevo Medicamento</string>
    <string name="text_name">Nombre</string>
    <string name="text_dosis">Dosis</string>
    <string name="text_administracion">Administración</string>
    <string name="text_formato">Formato (comprimido, inyeccion...)</string>
    <string name="new_medicamento">Insertar Medicamento</string>
    <string name="text_laboratorio">Laboratorio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_apimed_title">Medicamentos</string>
    <string name="text_search_med">Nombre del medicamento</string>
    <string name="search">Buscar</string>
    <string name="dialogtext">Desea seleccionar:</string>
    <string name="cancel">Cancelar</string>
    <string name="continuar">Continuar</string>
    <string name="fragment_tratamiento_title">Tratamiento</string>
    <string name="date">Fecha</string>
    <string name="finish_date">Fecha final</string>
    <string name="guardar_tratamiento">Guardar tratamiento</string>
    <string name="med">Medicamento</string>
    <string name="selectedmed">Medicamento Seleccionado</string>
    <string name="confirm">Confirmar</string>
    <string name="date_trat">Fecha tratamiento</string>
    <string name="entendido">Entendido</string>
    <string name="prospecto">Prospecto</string>
    <string name="new_notification">Realizar toma de medicamento</string>
    <string name="default_notification_channel_id">default</string>
</resources>